# ChangeLog for dev-haskell/x11
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-haskell/cvs-repo/gentoo-x86/dev-haskell/x11/ChangeLog,v 1.7 2008/05/25 11:14:18 kolmodin Exp $

  25 May 2008; Lennart Kolmodin <kolmodin@gentoo.org> x11-1.2.1.ebuild,
  x11-1.4.0.ebuild, x11-1.4.1.ebuild:
  Add IUSE="xinerama" and add missing dependency on libXinerama.
  This requires >=cabal-1.2.3.0.
  Reported by Prashanth Mundkur <prashanth.mundkur@gmail.com>.
  This fixes bug #223377.
  Fix minor repoman issue with x11-1.2.1.

*x11-1.4.1 (16 Dec 2007)

  16 Dec 2007; Lennart Kolmodin <kolmodin@gentoo.org> +x11-1.4.1.ebuild:
  Version bump.

  15 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> x11-1.4.0.ebuild:
  Added ~sparc.

*x11-1.4.0 (13 Dec 2007)

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> x11-1.2.1.ebuild,
  +x11-1.4.0.ebuild:
  New version. Fix quoting issue in older ebuild.

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> x11-1.1.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  25 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> x11-1.2.ebuild,
  x11-1.2.1.ebuild, x11-1.2.2.ebuild:
  Add missing x11-libs/libX11 dependency.

*x11-1.2.2 (09 Jul 2007)
*x11-1.2.1 (09 Jul 2007)
*x11-1.2 (09 Jul 2007)
*x11-1.1 (09 Jul 2007)

  09 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +metadata.xml,
  +x11-1.1.ebuild, +x11-1.2.ebuild, +x11-1.2.1.ebuild, +x11-1.2.2.ebuild:
  Initial versions.
