@@ -4,6 +4,7 @@ Hash: SHA1
 DIST X11-1.2.2.tar.gz 72793 RMD160 f04a7f05d850294fb77d1b5ebb13e3361d0729ad SHA1 f206cebbef7e2d6245670f8795a84f1acb556413 SHA256 67450351a44955966a29e282e2b8a9888ad337add432adec43f0f370b0835ed8
 DIST X11-1.4.0.tar.gz 85583 RMD160 95f9147f3fee68bdd0c393851b9bd16e3ce3745d SHA1 8bd26e814519d980c334351151604103f012f9e7 SHA256 11cd8d4c9d81a420bb4cc4400a57f760497a7a4f0899b1369b95a454063b9560
 DIST X11-1.4.1.tar.gz 88934 RMD160 79bcde642e2628ca9723bf20c3e121fb662a4eac SHA1 f060f28bf2f060be4f38ed0a6df42da0097fa1e5 SHA256 e51038541415686f0e278ccdbc0b2373cd11f212de99023b7b8f8e776aa09f79
+DIST X11-1.4.2.tar.gz 89510 RMD160 0b745caa250e036f02bc35255b7a7a97dd9e7f0d SHA1 28f5a257b9f601538822f47c9731b6e20618fbcf SHA256 7a37ba1adee9c30a27013ea7058e907c2348ef08eaa79c9895e62e4f0d73d2aa
 DIST ghc-6.6-src-extralibs.tar.bz2 2015443 RMD160 63d87d02f42efc032c20de7394f3b29431fd8eed SHA1 b94974e255165703d882bb522ec44c5bdc4b0aec SHA256 1c811695d074c7560ca9bd7773523f817ccb57390044392a1ad92cf0079bea29
 DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c823aaa90ea8530 SHA1 1398f6c35191d52410a2e066b382635dff0d8d6d SHA256 d162a82fc388fdd48c327b09bb6d778f2313d12d5282f3b120ac08a5d4e78902
 EBUILD x11-1.1.ebuild 831 RMD160 c20a53f125be3ec58354075f9853082ede46adbe SHA1 7705ab6724909a7de0564b0da850569dd1fcbfc7 SHA256 01139b34b17348b92cbd9f0fe6363c4a626fb06ebe861b7dec883f277f3d7aca
@@ -12,12 +13,13 @@ EBUILD x11-1.2.2.ebuild 688 RMD160 3297402aa916e22b5595765755e526aee810c4ad SHA1
 EBUILD x11-1.2.ebuild 609 RMD160 328f7068e69610a6bce10b9d3808f5642d970b46 SHA1 1fe2655e8d5f0965356b77522a97260d6bc96bda SHA256 e4146cb0b12032a2c160ef51802c3fd526c6dc22a030a49a3e1639c90952c1da
 EBUILD x11-1.4.0.ebuild 922 RMD160 3d683a7a4bc2044f02bd6f11e20dd1e64387578d SHA1 813993b2596c492ca7df0f92e432a34b4eb052b7 SHA256 0d36b8dabe4be7a6e5365a1715722240513284416a35df86381c09018d006410
 EBUILD x11-1.4.1.ebuild 922 RMD160 6b7004b8a5cc68fc2df65fc5f3643e66898aff95 SHA1 5ef337b2b81c63d1cd0c37ede4ac9be9fb41857a SHA256 a0ccb00befae128b2cc6ff8f2864f6a93895b90c26ebbf71a53839232e196f26
-MISC ChangeLog 1428 RMD160 0515053cfdd43e895f7fa061bd76803e5293c1b3 SHA1 a9458c14469f4d19a24f47f8dfc71a741192944a SHA256 3e7d161c4855a6aead30b70d0f3f865043d09cada7fdef02a8216a5898824734
+EBUILD x11-1.4.2.ebuild 919 RMD160 34ab019073b0c6c2d2191de3f72209f45dbae404 SHA1 e096f56b628095487a1b0f61bb491effceecf248 SHA256 c1d507fb745f2877a11bdbbc25e509be8f97e5ce36e554dca499a7dc6d341b2d
+MISC ChangeLog 1544 RMD160 f826e47e24352afff6068fc57dc29e31ad43dcbd SHA1 c06ee745239e2b2ed1d5081d6400c8ca899a27e7 SHA256 4c026a0b29c0305a7da434af442e99d50c47e80a49a5f8d948031f5a91fb9c76
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkg5UQYACgkQ1n/CYbXjntJY+ACgqJ/3WY0aKtMLXUrvZ/cSsvjn
-9QsAn2Ff2BYkOurh7QhdbEtnOu6wB6qY
-=UTcP
+iEYEARECAAYFAkg5Ua4ACgkQ1n/CYbXjntIzFgCdHJklsCdNf9U6bYXdi6W8ou2/
+XJoAn32HxGIlW4n7C6SK1QnJv0yQ4o2f
+=I5Bp
 -----END PGP SIGNATURE-----
