@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/x11
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-haskell/cvs-repo/gentoo-x86/dev-haskell/x11/ChangeLog,v 1.7 2008/05/25 11:14:18 kolmodin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-haskell/cvs-repo/gentoo-x86/dev-haskell/x11/ChangeLog,v 1.8 2008/05/25 11:17:06 kolmodin Exp $
+
+*x11-1.4.2 (25 May 2008)
+
+  25 May 2008; Lennart Kolmodin <kolmodin@gentoo.org> +x11-1.4.2.ebuild:
+  Version bump.
 
   25 May 2008; Lennart Kolmodin <kolmodin@gentoo.org> x11-1.2.1.ebuild,
   x11-1.4.0.ebuild, x11-1.4.1.ebuild:
